src/pages/settings/businessHours/BusinessHours.less
:local {
    .businessHoursLabel {
        display: block;
    }

    .businessHoursInput {
        display: flex;
        align-items: center;

        & > div,
        & > input,
        & > p {
            margin-right: 5px;
            margin-bottom: 0;
        }

        .timeField {
            width: 121px;
            height: 32px;
        }

        .closeWrapper {
            display: flex;
            flex-direction: column;
            justify-content: center;
        }
    }

    .deleteButton {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        font-weight: bold;
        cursor: pointer;
    }
}

